Publish wandb reports, update nightly runs (#51)
Adds a step to the nightly workflow to create and publish a wandb report
for each set of nightly runs. Also updating the nightly runs to all run
in the same project with better run names/ids.

--- a/.github/workflows/static-checks.yaml
+++ b/.github/workflows/static-checks.yaml
@@ -40,4 +40,5 @@ jobs:
           pre-commit install-hooks
           git diff --name-only "origin/${GITHUB_BASE_REF:-main}" "${GITHUB_SHA}" --
           git diff --name-only "origin/${GITHUB_BASE_REF:-main}" "${GITHUB_SHA}" -- | xargs pre-commit run --files
+          git diff
           mypy .
