--- a/mypy.ini
+++ b/mypy.ini
@@ -86,6 +86,9 @@ ignore_missing_imports = True
 [mypy-pygame.*]
 ignore_missing_imports = True
 
+[mypy-_pytest.*]
+follow_imports = skip
+
 [mypy-pxr.*]
 ignore_missing_imports = True
 
@@ -124,6 +127,9 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-viser.*]
+ignore_missing_imports = True
+
+[mypy-wandb_workspaces.*]
 ignore_missing_imports = True
 
 [mypy-yaml.*]
