--- a/src/isaaclab_fast_sac/pyproject.toml
+++ b/src/isaaclab_fast_sac/pyproject.toml
@@ -10,4 +10,4 @@ logging = ["tensorboard"]
 
 [build-system]
 requires = ["setuptools>=64"]
-build-backend = "setuptools.backends._legacy:_Backend"
+# build-backend = "setuptools.backends._legacy:_Backend"
